--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "steam-comment-bot-template",
     "version": "1.0.0",
     "description": "This is a steam-comment-service-bot template plugin to help you create your own.",
-    "dependencies": {},
+    "dependencies": {
+        "output-logger": "^2.3.6"
+    },
     "author": "3urobeat",
     "license": "MIT",
     "main": "plugin.js"
