--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "steam-comment-bot-template",
     "version": "1.0.2",
+    "botVersion": "2.15.0",
     "description": "This is a steam-comment-service-bot template plugin to help you create your own.",
     "dependencies": {
         "output-logger": "^2.3.6"
